<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_indiv"
    tools:context=".screens.CameraIndFragment.CameraIndFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_number"
        android:background="@drawable/background_number_individual"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/primaryColorOn"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
        app:tabIndicatorColor="@color/primaryColor"
        app:tabMode="scrollable"
        android:backgroundTint="@color/primaryLightLightColor"
        app:tabSelectedTextColor="@color/primaryColorOff"
        app:tabTextColor="@color/primaryColorOn"
        app:layout_constraintTop_toBottomOf="@+id/pager"
        app:layout_constraintStart_toStartOf="parent"/>

        <HorizontalScrollView
            android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_pir"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_pir_off"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_get_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_get_photo"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_get_photo"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintStart_toEndOf="@id/button_pir"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_contacts"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_contact_add"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintStart_toEndOf="@id/button_get_photo"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_gps"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_show_map"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintStart_toEndOf="@id/button_add_contact"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_progr_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_progr"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_progr_first"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintStart_toEndOf="@id/button_gps"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_delete"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_delete"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintTop_toBottomOf="@id/button_pir"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_logs"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_logs_show"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintTop_toBottomOf="@id/button_pir"
            app:layout_constraintStart_toEndOf="@id/button_delete"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_date"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_set_date"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintTop_toBottomOf="@id/button_pir"
            app:layout_constraintStart_toEndOf="@id/button_logs"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_sms"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_sms_off"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintTop_toBottomOf="@id/button_pir"
            app:layout_constraintStart_toEndOf="@id/button_date" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_progr_secend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/primaryLightLightColor"
            android:drawableBottom="@drawable/ic_progr"
            android:drawableTint="@color/primaryColorOn"
            android:text="@string/button_progr_secend"
            android:textColor="@color/primaryColorOn"
            android:textSize="@dimen/text_size_ind_card"
            app:layout_constraintTop_toBottomOf="@id/button_pir"
            app:layout_constraintStart_toEndOf="@id/button_sms" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</HorizontalScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logs_view"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>